# jsonschema-rs

./: .gitignore  Cargo.toml
jsonschema/: Cargo.toml
jsonschema/src/: lib.rs  validator.rs
jsonschema/src/compilation/: options.rs
jsonschema_custom_validation/: Cargo.toml
jsonschema_custom_validation/examples/: sample.rs
jsonschema_custom_validation/src/: lib.rs
jsonschema_custom_validation/test_cases/: invalid_macro_use_arg.rs  invalid_macro_use_return.rs  valid_macro_use.rs
jsonschema_custom_validator/: Cargo.toml
jsonschema_custom_validator/src/: lib.rs
