[package]
name = "jsonschema_custom_validator"
version = "0.8.0"
authors = ["J Burnside <jcburnside97@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "../README.md"
description = "A crate for a proc macro for custom JSON schema validation"
repository = "https://github.com/Stranger6667/jsonschema-rs"
keywords = ["jsonschema", "validation"]
categories = ["web-programming"]